--- a/search.html
+++ b/search.html
@@ -1,19 +1,18 @@
 ---
-title: Search
+layout: default
+title: Elly's Blog
 description: "Search this site"
-layout: page
 permalink: /search/
 tipue_search_active: true
 exclude_from_search: true
 ---
 
-<form action="{{ page.url | relative_url }}">
-  <div class="tipue_search_left"><img src="{{ "/assets/tipuesearch/search.png" | relative_url }}" class="tipue_search_icon"></div>
-  <div class="tipue_search_right"><input type="text" name="q" id="tipue_search_input" pattern=".{3,}" title="At least 3 characters" required></div>
-  <div style="clear: both;"></div>
-</form>
-
-<div id="tipue_search_content"></div>
+<div class="home" id="home">
+  <h1 class="pageTitle">Search Results</h1>
+  <div class="posts noList">
+    <div id="tipue_search_content"></div>
+  </div>
+</div>
 
 <script>
 $(document).ready(function() {
@@ -24,5 +23,3 @@ $(document).ready(function() {
   });
 });
 </script>
-
-
