--- a/search.html
+++ b/search.html
@@ -6,6 +6,10 @@ permalink: /search/
 <div class="home" id="home">
   <h1 class="pageTitle">Search Results</h1>
   <div class="posts noList">
+    <div id="search-bar">
+      <i class="fa fa-search" aria-hidden="true"></i>
+      <input id="search-input" type="text" placeholder="Search..." />
+    </div>
       <ul id="results-container"></ul>
   </div>
 </div>
